fake tags removed

--- a/index.html
+++ b/index.html
@@ -4,19 +4,14 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>FCC: Personal Portfolio</title>
+	<title>Milos Andjelkovic - Personal Portfolio</title>
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=latin-ext" rel="stylesheet">
 	<link rel="stylesheet" href="styles.css">
 
 </head>
 
 <body>
-	<section id="welcome-section">
-		<h1>Fake welcome section</h1>
-	</section>
-
 	<section id="content-container">
-		<selection id="navbar"><a href="#welcome-section">Fake navbar</a></selection>
 		<section id="navbar-real">
 			<header>
 				<img src="https://www.dropbox.com/s/v9f2pdvnkh7e4m7/milos-a.jpg?raw=1" alt="Miloš Anđelković">
