--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<ul class="social-links">
 					<li class="dribbble"><span></span><a href="https://dribbble.com/orli-beli" target="_blank">Dribbble</a></li>
 					<li class="behance"><span></span><a href="https://www.behance.net/orli-beli" target="_blank">Behance</a></li>
-					<li class="github"><span></span><a id="profile-link" href="https://www.github.com" target="_blank">Github</a></li>
+					<li class="github"><span></span><a id="profile-link" href="https://www.github.com/milosandjelkovic" target="_blank">Github</a></li>
 				</ul>
 			</nav>
 		</section>
