added bmi-calculator and blurred-table items

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 				<h2>Free Code Camp Projects</h2>
 				<div id="tile-container">
 					<section class="project-tile">
-						<a href="https://codepen.io/milosa/full/QWbgzom" target="_blank">
-							<img src="https://www.dropbox.com/s/23kk1o2zpwfan6v/tribute-page.png?raw=1" alt="">
+						<a href="https://milosandjelkovic.github.io/tribute-page/" target="_blank">
+							<img src="https://www.dropbox.com/s/23kk1o2zpwfan6v/tribute-page.png?raw=1" alt="tribute page preview">
 							<dl>
 								<dt>Tribute page</dt>
 								<dd>Technologies used: HTML, CSS</dd>
@@ -61,8 +61,8 @@
 					</section>
 
 					<section class="project-tile">
-						<a href="https://codepen.io/milosa/full/OJPgbyN" target="_blank">
-								<img src="https://www.dropbox.com/s/wpoctfwtnrb7yl2/survey-form.png?raw=1" alt="Survey form page">
+						<a href="https://milosandjelkovic.github.io/survey-form/" target="_blank">
+								<img src="https://www.dropbox.com/s/wpoctfwtnrb7yl2/survey-form.png?raw=1" alt="Survey form page preview">
 								<dl>
 									<dt>Survey form</dt>
 									<dd>Technologies used: HTML, CSS</dd>
@@ -72,7 +72,7 @@
 
 					<section class="project-tile">
 						<a href="https://codepen.io/milosa/full/yLNoygP" target="_blank">
-							<img src="https://www.dropbox.com/s/jhtpmi60tv2omyq/technical-documentation.png?raw=1" alt="Technical documentation page">
+							<img src="https://www.dropbox.com/s/jhtpmi60tv2omyq/technical-documentation.png?raw=1" alt="Technical documentation page preview">
 							<dl>
 								<dt>Technical documentation</dt>
 								<dd>Technologies used: HTML, CSS, JS</dd>
@@ -81,11 +81,31 @@
 					</section>
 
 					<section class="project-tile">
-						<a href="https://codepen.io/milosa/full/xxGLGMR" target="_blank">
-							<img src="https://www.dropbox.com/s/zat1we9h4h95iaq/landing-page.png?raw=1" alt="Landing page">
+						<a href="https://milosandjelkovic.github.io/landing-page/" target="_blank">
+							<img src="https://www.dropbox.com/s/zat1we9h4h95iaq/landing-page.png?raw=1" alt="Landing page preview">
 							<dl>
 								<dt>Landing page</dt>
 								<dd>Technologies used: HTML, CSS</dd>
+							</dl>
+						</a>
+					</section>
+					
+					<section class="project-tile">
+						<a href="https://milosandjelkovic.github.io/bmi-calculator/" target="_blank">
+							<img src="https://www.dropbox.com/s/xe1l460z3h2hcww/bmi-calculator.png?raw=1" alt="BMI Calculator preview">
+							<dl>
+								<dt>BMI Calculator</dt>
+								<dd>Technologies used: HTML, CSS, JS</dd>
+							</dl>
+						</a>
+					</section>
+					
+					<section class="project-tile">
+						<a href="https://milosandjelkovic.github.io/blurred-table/" target="_blank">
+							<img src="https://www.dropbox.com/s/l5a3pwqoxcinqj3/table-page.png?raw=1" alt="Table page preview">
+							<dl>
+								<dt>HTML table</dt>
+								<dd>Technologies used: HTML, CSS, JS</dd>
 							</dl>
 						</a>
 					</section>
