link to technical-documentation-page updated to its github address

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 					</section>
 
 					<section class="project-tile">
-						<a href="https://codepen.io/milosa/full/yLNoygP" target="_blank">
+						<a href="https://milosandjelkovic.github.io/technical-documentation-page/" target="_blank">
 							<img src="https://www.dropbox.com/s/jhtpmi60tv2omyq/technical-documentation.png?raw=1" alt="Technical documentation page preview">
 							<dl>
 								<dt>Technical documentation</dt>
