random-profile-page-item added

--- a/index.html
+++ b/index.html
@@ -50,6 +50,17 @@
 			<section id="projects">
 				<h2>Free Code Camp Projects</h2>
 				<div id="tile-container">
+					
+					<section class="project-tile">
+						<a href="https://milosandjelkovic.github.io/tribute-page/" target="_blank">
+							<img src="https://www.dropbox.com/s/u0fuobkzlm9zhks/random-profile-page-screenshot.png?raw=1" alt="tribute page preview">
+							<dl>
+								<dt>Profile page</dt>
+								<dd>Technologies used: HTML, CSS</dd>
+							</dl>
+						</a>
+					</section>
+					
 					<section class="project-tile">
 						<a href="https://milosandjelkovic.github.io/tribute-page/" target="_blank">
 							<img src="https://www.dropbox.com/s/23kk1o2zpwfan6v/tribute-page.png?raw=1" alt="tribute page preview">
