link to random profile page added

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				<div id="tile-container">
 					
 					<section class="project-tile">
-						<a href="https://milosandjelkovic.github.io/tribute-page/" target="_blank">
+						<a href="https://milosandjelkovic.github.io/random-profile-page/" target="_blank">
 							<img src="https://www.dropbox.com/s/u0fuobkzlm9zhks/random-profile-page-screenshot.png?raw=1" alt="tribute page preview">
 							<dl>
 								<dt>Profile page</dt>
