fm single price component added

--- a/index.html
+++ b/index.html
@@ -120,6 +120,16 @@
 							</dl>
 						</a>
 					</section>
+					
+					<section class="project-tile">
+						<a href="https://milosandjelkovic.github.io/fm-single-price-grid-component/" target="_blank">
+							<img src="https://www.dropbox.com/s/mtw6o02kjvj4lyx/single-price-component.png?raw=1" alt="Table page preview">
+							<dl>
+								<dt>FM Single price component</dt>
+								<dd>Technologies used: HTML, CSS, JS</dd>
+							</dl>
+						</a>
+					</section>
 				</div>
 			</section>
 		</main>
