--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
 					
 					<section class="project-tile">
 						<a href="https://milosandjelkovic.github.io/fm-single-price-grid-component/" target="_blank">
-							<img src="https://www.dropbox.com/s/mtw6o02kjvj4lyx/single-price-component.png?raw=1" alt="Table page preview">
+							<img src="https://www.dropbox.com/s/mtw6o02kjvj4lyx/single-price-component.png?raw=1" alt="Front end mentor Single Price Component">
 							<dl>
 								<dt>FM Single price component</dt>
-								<dd>Technologies used: HTML, CSS, JS</dd>
+								<dd>Technologies used: HTML, CSS</dd>
 							</dl>
 						</a>
 					</section>
