list-item image links improved

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 				</ul>
 
 				<ul class="social-links">
-					<li class="dribbble"><span></span><a href="https://dribbble.com/orli-beli" target="_blank">Dribbble</a></li>
-					<li class="behance"><span></span><a href="https://www.behance.net/orli-beli" target="_blank">Behance</a></li>
-					<li class="github"><span></span><a id="profile-link" href="https://www.github.com/milosandjelkovic" target="_blank">Github</a></li>
+					<li><a class="dribbble" href="https://dribbble.com/orli-beli" target="_blank">Dribbble</a></li>
+					<li><a class="behance" href="https://www.behance.net/orli-beli" target="_blank">Behance</a></li>
+					<li><a class="github" href="https://www.github.com/milosandjelkovic" target="_blank">Github</a></li>
 				</ul>
 			</nav>
 		</section>
