--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 					<section class="project-tile">
 						<a href="https://milosandjelkovic.github.io/survey-form/" target="_blank">
-								<img src="https://www.dropbox.com/s/wpoctfwtnrb7yl2/survey-form.png?raw=1" alt="Survey form page preview">
+								<img src="/img/inkscape-landing-page.png" alt="Survey form page preview">
 								<dl>
 									<dt>Survey form</dt>
 									<dd>Technologies used: HTML, CSS</dd>
@@ -92,10 +92,10 @@
 					</section>
 
 					<section class="project-tile">
-						<a href="https://milosandjelkovic.github.io/landing-page/" target="_blank">
-							<img src="https://www.dropbox.com/s/zat1we9h4h95iaq/landing-page.png?raw=1" alt="Landing page preview">
+						<a href="https://milosandjelkovic.github.io/inkscape-landing-page/" target="_blank">
+							<img src="https://www.dropbox.com/s/zat1we9h4h95iaq/landing-page.png?raw=1" alt="Inkscape landing page preview">
 							<dl>
-								<dt>Landing page</dt>
+								<dt>Inkscape landing page</dt>
 								<dd>Technologies used: HTML, CSS</dd>
 							</dl>
 						</a>
