link to inkscape-landing-page-image.png added

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
 					<section class="project-tile">
 						<a href="https://milosandjelkovic.github.io/inkscape-landing-page/" target="_blank">
-							<img src="https://www.dropbox.com/s/zat1we9h4h95iaq/landing-page.png?raw=1" alt="Inkscape landing page preview">
+							<img src="img/inkscape-landing-page.png" alt="Inkscape landing page preview">
 							<dl>
 								<dt>Inkscape landing page</dt>
 								<dd>Technologies used: HTML, CSS</dd>
