--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 					<section class="project-tile">
 						<a href="https://milosandjelkovic.github.io/survey-form/" target="_blank">
-								<img src="/img/inkscape-landing-page.png" alt="Survey form page preview">
+								<img src="https://github.com/milosandjelkovic/personal-page/blob/master/img/inkscape-landing-page-screenshot.png" alt="Survey form page preview">
 								<dl>
 									<dt>Survey form</dt>
 									<dd>Technologies used: HTML, CSS</dd>
