Correct link to screenshot added

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 					<section class="project-tile">
 						<a href="https://milosandjelkovic.github.io/survey-form/" target="_blank">
-								<img src="https://github.com/milosandjelkovic/personal-page/blob/master/img/inkscape-landing-page-screenshot.png" alt="Survey form page preview">
+								<img src="https://www.dropbox.com/s/zcl7ck3dss81zng/survey-form-screenshot.png?raw=1" alt="Survey form page preview">
 								<dl>
 									<dt>Survey form</dt>
 									<dd>Technologies used: HTML, CSS</dd>
