--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
 					<section class="project-tile">
 						<a href="https://milosandjelkovic.github.io/inkscape-landing-page/" target="_blank">
-							<img src="https://www.dropbox.com/sh/t3gc0x26rlfq6cn/AACyfn6yAbmzj-PI8G12Kkeva?raw=1" alt="Inkscape landing page preview">
+							<img src="https://www.dropbox.com/s/lm3iv9qruvg27n0/inkscape-landing-page-screenshot.png?raw=1" alt="Inkscape landing page preview">
 							<dl>
 								<dt>Inkscape landing page</dt>
 								<dd>Technologies used: HTML, CSS</dd>
