ps status changed

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					<h2>Skills</h2>
 					<p>HTML, CSS, JavaScript (basics), Linux.</p>
 					<h2>Tools</h2>
-					<p>Inkscape, Adobe Illustrator, Figma, GNU Image Manipulation Program, Photoshop (basics).</p>
+					<p>Inkscape, Adobe Illustrator, Figma, GNU Image Manipulation Program, Photoshop.</p>
 			</div>
 
 			<section id="projects">
